plugins {
    id 'org.springframework.boot' version '3.0.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id "me.champeau.jmh" version "0.6.4"
}

group = 'com.dalcho'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.projectlombok:lombok:1.18.20'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2:1.4.199'
    runtimeOnly 'mysql:mysql-connector-java'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // chat
    implementation 'org.webjars:webjars-locator-core' // version
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.webjars:sockjs-client:1.1.2'
    implementation 'org.webjars:stomp-websocket:2.3.3-1'
    implementation 'org.webjars.bower:bootstrap:4.3.1'
    implementation 'org.webjars:jquery:3.7.1'

    // chat-file
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'org.apache.commons:commons-lang3' //StringUtils

    // securtiy
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt:0.9.1' // jwt
    //implementation 'org.json:json:20220320'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    // 소셜 로그인을 통한 인증과 권한 처리를 쉽게 할 수 있게 해준다.

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    //implementation 'redis.clients:jedis:3.6.3' // RedisSubscriber
    implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'//broker
    //implementation 'org.springframework.session:spring-session-data-redis'

    // 메시지 큐
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    //file
    //implementation 'commons-io:commons-io:2.11.0'

    //test
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.assertj:assertj-core:3.23.1'

    // JMH
    implementation 'org.openjdk.jmh:jmh-core:1.32'
    implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.32'

    implementation 'org.slf4j:slf4j-simple:1.7.36'

    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    // javax.xml.bind
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'

}
jmh{
    fork = 0
    warmupIterations = 10
    iterations = 10
}
test {
    useJUnitPlatform()
}
